--- a/billetterie-frontend/src/app/features/events/event-details/event-details.component.html
+++ b/billetterie-frontend/src/app/features/events/event-details/event-details.component.html
@@ -41,7 +41,7 @@
           </svg>
         </div>
 <!--        <span class="text-gray-400">23 mai 2025 à 20:30</span>-->
-        <span class="text-gray-400">{{event?.startDate}}</span>
+        <span class="text-gray-400">{{event?.dateEvent}}</span>
       </div>
 
       <div class="flex items-start">
@@ -74,7 +74,7 @@
         <div class="text-main-orange mr-2">📅</div>
         <div>
           <span class="text-gray-500">Date : </span>
-          <span class="text-gray-400">{{event?.startDate}}</span>
+          <span class="text-gray-400">{{event?.dateEvent}}</span>
         </div>
       </div>
 
@@ -82,7 +82,7 @@
         <div class="text-main-orange mr-2">🕗</div>
         <div>
           <span class="text-gray-500">Heure : </span>
-          <span class="text-gray-400">{{event?.startDate}}</span>
+          <span class="text-gray-400">{{event?.dateEvent}}</span>
         </div>
       </div>
 
