--- a/billetterie-frontend/src/app/features/events/tickets-selection/tickets-selection.component.html
+++ b/billetterie-frontend/src/app/features/events/tickets-selection/tickets-selection.component.html
@@ -14,13 +14,13 @@
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1 main-orange" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
           </svg>
-          <span>{{ event?.startDate }}</span>
+          <span>{{ event?.dateEvent }}</span>
         </div>
         <div class="mr-6 flex items-center">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1 main-orange" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
           </svg>
-          <span>{{ event?.startDate }}</span>
+          <span>{{ event?.dateEvent }}</span>
         </div>
         <div class="flex items-center mt-2 sm:mt-0">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1 main-orange" fill="none" viewBox="0 0 24 24" stroke="currentColor">
