--- a/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
+++ b/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
@@ -70,16 +70,15 @@
                   <i class="fas fa-tag text-orange-500 mr-2"></i> Catégorie 
                 </label>
                 <select id="eventCategory" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500" formControlName="category">
-                  <option value="">Choisir une catégorie</option>
-                  <option value="conference">CONCERT</option>
-                  <option value="workshop">SPORT</option>
-                  <option value="meetup">THEATRE</option>
+                  <option value="CONCERT">CONCERT</option>
+                  <option value="SPORT">SPORT</option>
+                  <option value="THEATRE">THEATRE</option>
                   <option value="concert">CINEMA</option>
-                  <option value="exhibition">FESTIVAL</option>
-                  <option value="exhibition">CONFERENCE</option>
-                  <option value="exhibition">EXPOSITION</option>
-                  <option value="exhibition">ATELIER</option>
-                  <option value="exhibition">AUTRE</option>
+                  <option value="CINEMA">FESTIVAL</option>
+                  <option value="CONFERENCE">CONFERENCE</option>
+                  <option value="EXPOSITION">EXPOSITION</option>
+                  <option value="ATELIER">ATELIER</option>
+                  <option value="AUTRE">AUTRE</option>
                 </select>
               </div>
 
@@ -92,13 +91,12 @@
                 </label>
                 <select id="eventStatus" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500" 
                 formControlName="status">
-                  <option value="">Choisir un statut</option>
-                  <option value="planned">DRAFT</option>
-                  <option value="ongoing">PUBLISHED</option>
-                  <option value="completed">CANCELED</option>
-                  <option value="cancelled">SOLD_OUT</option>
-                  <option value="cancelled">POSTPONED</option>
-                  <option value="cancelled">COMPLETED</option>
+                  <option value="DRAFT">DRAFT</option>
+                  <option value="PUBLISHED">PUBLISHED</option>
+                  <option value="CANCELED">CANCELED</option>
+                  <option value="SOLD_OUT">SOLD_OUT</option>
+                  <option value="POSTPONED">POSTPONED</option>
+                  <option value="COMPLETED">COMPLETED</option>
                 </select>
               </div>
             </div>             
