--- a/billetterie-frontend/src/app/shared/components/header/header.component.html
+++ b/billetterie-frontend/src/app/shared/components/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<button class="p-2 m-3 bg-orange-500 text-white">tickets</button>
+<button class="p-2 m-3 bg-orange-500 text-white" routerLink="/admin-panel">admin panel</button>
+<button mat-raised-button>tickets</button>
