--- a/billetterie-frontend/src/app/features/organizer/components/my-events/my-events.component.html
+++ b/billetterie-frontend/src/app/features/organizer/components/my-events/my-events.component.html
@@ -90,7 +90,7 @@
                 
                 <!-- Bouton Détails -->
                 <button class="mt-4 bg-orange-500 text-white px-4 py-2 rounded-lg hover:bg-orange-600 transition font-semibold"
-                routerLink="#detaillsEvent">
+                routerLink="#detaillsEvent" [routerLink]="['/details', event.id]">
                 Détails
                 </button>
             </div>
