--- a/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
+++ b/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
@@ -99,7 +99,30 @@
                   <option value="COMPLETED">COMPLETED</option>
                 </select>
               </div>
-            </div>             
+            </div> 
+
+            <!-- <div class="mb-6">
+            <label class="block text-gray-700 font-medium mb-2">
+              <i class="fas fa-ticket-alt text-orange-500 mr-2"></i> Types de Tickets
+            </label>
+
+            <div class="flex flex-wrap gap-4">
+              <button type="button" class="px-3 py-1 bg-blue-100 text-blue-700 rounded hover:bg-blue-200"
+                (click)="addTicketType('VIP')">Ajouter VIP</button>
+              <button type="button" class="px-3 py-1 bg-green-100 text-green-700 rounded hover:bg-green-200"
+                (click)="addTicketType('NORMALE')">Ajouter NORMALE</button>
+              <button type="button" class="px-3 py-1 bg-purple-100 text-purple-700 rounded hover:bg-purple-200"
+                (click)="addTicketType('PREMIUM')">Ajouter PREMIUM</button>
+            </div>
+
+            <div formArrayName="tickets" class="mt-4 space-y-3">
+              <div *ngFor="let ticket of tickets.controls; let i = index" [formGroupName]="i" class="grid grid-cols-2 gap-4 items-center">
+                <input type="text" formControlName="type" disabled class="px-3 py-2 bg-gray-100 rounded border border-gray-300"/>
+                <input type="number" formControlName="capacity" placeholder="Capacité" class="px-3 py-2 border rounded border-gray-300"/>
+              </div>
+            </div>
+          </div> -->
+
 
             <!-- *********************************************************************************** -->
              <!-- Image -->
@@ -117,6 +140,7 @@
               </label>
             </div>
 
+            
             <!-- *********************************************************************************** -->
              <!-- Bouton -->
             <div class="flex justify-end">
