--- a/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
+++ b/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
@@ -8,7 +8,7 @@
             </h2>
 
         <div class="bg-white rounded-2xl shadow-md p-8">
-          <form [formGroup]="newEventFormGroup" (ngSubmit)="handleSaveEvent()">
+          <form [formGroup]="newEventFormGroup" (ngSubmit)="handleUploadImage()">
 
             <!-- *********************************************************************************** -->
              <!-- Nom -->
@@ -164,7 +164,7 @@
              <!-- Bouton -->
             <div class="flex justify-end">
               <button type="submit"
-                      (click)="handleSaveEvent()"
+                      (click)="handleUploadImage()"
                       class="px-6 py-3 bg-orange-500 text-white rounded-lg hover:bg-orange-600 focus:outline-none focus:ring-2 focus:ring-orange-500 flex items-center">
                 <i class="fas fa-save mr-2"></i>
                 Créer l'événement
