Upload and get image file for add event organizer

--- a/billetterie-frontend/src/app/events/events.component.html
+++ b/billetterie-frontend/src/app/events/events.component.html
@@ -129,7 +129,7 @@
             </div>
             <div class="flex justify-between items-center">
               <span class="font-bold text-[#f97316]">
-                À partir de {{ e.price }} DH
+                À partir de 10DH
               </span>
               <button
                 class="bg-[#f97316] text-white px-3 py-1 rounded-md text-sm hover:bg-[#fb7c24] transition"
