--- a/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
+++ b/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
@@ -257,7 +257,7 @@
                   </div>
 
                   <!-- Hidden File Input -->
-                  <input id="eventImage" type="file" class="hidden" (change)="onFileSelected($event)"/>
+                  <input id="eventImage" type="file" class="hidden" (change)="onFileSelected($event)" formControlName="image"/>
                 </label>
               </div>
             </div>
