front first part login

--- a/billetterie-frontend/src/app/app.component.html
+++ b/billetterie-frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <!--<app-new-events></app-new-events>-->
 <!-- <event-details-organizer></event-details-organizer> -->
