Add payment and Event Ticket

--- a/billetterie-frontend/src/app/app.component.html
+++ b/billetterie-frontend/src/app/app.component.html
@@ -1,3 +1,5 @@
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>-->
 <!--<app-new-events></app-new-events>-->
-<!-- <event-details-organizer></event-details-organizer> -->
+<!-- <event-details-organizer></event-details-organizer>-->
+<event-details></event-details>
+<router-outlet></router-outlet>
