--- a/billetterie-frontend/src/app/features/payment/payment.component.html
+++ b/billetterie-frontend/src/app/features/payment/payment.component.html
@@ -145,7 +145,7 @@
           <div class="space-y-3">
             <div class="flex justify-between">
               <span class="text-gray-700">Nom du marchand</span>
-              <span class="font-medium">GUICHET MAROC (600002835)</span>
+              <span class="font-medium">BILLETTERIE MAROC (600002835)</span>
             </div>
           </div>
         </div>
