--- a/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
+++ b/billetterie-frontend/src/app/features/organizer/components/new-events/new-events.component.html
@@ -73,8 +73,8 @@
                   <option value="CONCERT">CONCERT</option>
                   <option value="SPORT">SPORT</option>
                   <option value="THEATRE">THEATRE</option>
-                  <option value="concert">CINEMA</option>
-                  <option value="CINEMA">FESTIVAL</option>
+                  <option value="CINEMA">CINEMA</option>
+                  <option value="FESTIVAL">FESTIVAL</option>
                   <option value="CONFERENCE">CONFERENCE</option>
                   <option value="EXPOSITION">EXPOSITION</option>
                   <option value="ATELIER">ATELIER</option>
@@ -101,27 +101,7 @@
               </div>
             </div>
 
-            <!-- <div class="mb-6">
-            <label class="block text-gray-700 font-medium mb-2">
-              <i class="fas fa-ticket-alt text-orange-500 mr-2"></i> Types de Tickets
-            </label>
 
-            <div class="flex flex-wrap gap-4">
-              <button type="button" class="px-3 py-1 bg-blue-100 text-blue-700 rounded hover:bg-blue-200"
-                (click)="addTicketType('VIP')">Ajouter VIP</button>
-              <button type="button" class="px-3 py-1 bg-green-100 text-green-700 rounded hover:bg-green-200"
-                (click)="addTicketType('NORMALE')">Ajouter NORMALE</button>
-              <button type="button" class="px-3 py-1 bg-purple-100 text-purple-700 rounded hover:bg-purple-200"
-                (click)="addTicketType('PREMIUM')">Ajouter PREMIUM</button>
-            </div>
-
-            <div formArrayName="tickets" class="mt-4 space-y-3">
-              <div *ngFor="let ticket of tickets.controls; let i = index" [formGroupName]="i" class="grid grid-cols-2 gap-4 items-center">
-                <input type="text" formControlName="type" disabled class="px-3 py-2 bg-gray-100 rounded border border-gray-300"/>
-                <input type="number" formControlName="capacity" placeholder="Capacité" class="px-3 py-2 border rounded border-gray-300"/>
-              </div>
-            </div>
-          </div> -->
 
             <!-- *********************************************************************************** -->
             <!-- Gestion des Billets -->
@@ -160,7 +140,7 @@
                       <input type="text"
                              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 text-sm"
                              placeholder="Ex: VIP, Étudiant, Normal"
-                             formControlName="name">
+                             formControlName="ticketType">
                     </div>
 
                     <!-- Quantité disponible -->
@@ -172,7 +152,7 @@
                              min="0"
                              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 text-sm"
                              placeholder="Ex: 100"
-                             formControlName="quantity">
+                             formControlName="maxQuantity">
                     </div>
 
                     <!-- Prix -->
@@ -228,6 +208,9 @@
               </div>
             </div>
 
+
+
+
             <!-- *********************************************************************************** -->
              <!-- Image -->
             <div class="mb-8">
@@ -246,7 +229,6 @@
                     class="absolute w-full h-full object-cover rounded-lg"
                     alt="Preview"
                   />
-
                   <!-- Dropzone Content -->
                   <div class="flex flex-col items-center justify-center pt-5 pb-6" *ngIf="!imagePreview">
                     <i class="fas fa-cloud-upload-alt text-3xl text-gray-400 mb-2"></i>
@@ -255,7 +237,6 @@
                     </p>
                     <p class="text-xs text-gray-500">PNG, JPG (MAX. 5MB)</p>
                   </div>
-
                   <!-- Hidden File Input -->
                   <input id="eventImage" type="file" class="hidden" (change)="onFileSelected($event)" formControlName="image"/>
                 </label>
